remove inline blame

--- a/zed/settings.json
+++ b/zed/settings.json
@@ -1,5 +1,6 @@
 // documentation: https://zed.dev/docs/configuring-zed
 {
+  "theme": "Ayu Dark",
   "features": {
     "copilot": false,
     "inline_completion_provider": "none"
@@ -9,5 +10,24 @@
     "enabled": false
   },
   "ui_font_size": 16,
-  "buffer_font_size": 16
+  "buffer_font_size": 16,
+  "terminal": {
+    "alternate_scroll": "off",
+    "blinking": "terminal_controlled",
+    "copy_on_select": false,
+    "env": {},
+    "option_as_meta": false,
+    "button": false,
+    "shell": "system",
+    "toolbar": {
+      "title": true
+    },
+    "working_directory": "current_project_directory"
+  },
+  "git": {
+    "git_gutter": "tracked_files",
+    "inline_blame": {
+      "enabled": false
+    }
+  }
 }
